<resources>
    <string name="app_name">PasswordManager</string>
    <string name="create_account_label">Create Account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="title_activity_add_website">addWebsite</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_website_label">"Add website"</string>
</resources>